test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_param.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[15]:
  struct
  identifier(s)
  ;
  int
  identifier(foo)
  (
  struct
  identifier(s)
  identifier(x)
  )
  {
  return
  const int(0)
  ;
  }
